--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "permissions": [
         "activeTab",
         "declarativeContent",
-        "storage"
+        "storage",
+        "tabs"
     ],
     "options_page": "pages/options.html",
     "background": {
@@ -27,5 +28,11 @@
         "48": "images/get_started48.png",
         "128": "images/get_started128.png"
     },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["scripts/dom.js"]
+        }
+    ],
     "manifest_version": 2
   }
