--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         "persistent": false
     },
     "page_action": {
-        "default_popup": "pages/popup.html",
+        "default_popup": "pages/profile.html",
         "default_icon": {
             "16": "images/get_started16.png",
             "32": "images/get_started32.png",
