--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,11 @@
         "activeTab",
         "declarativeContent",
         "storage",
-        "tabs"
+        "identity",
+        "tabs",
+        "https://linkedin.com/photos/*"
     ],
+    "content_security_policy": "script-src 'self' https://*.linkedin.com 'unsafe-eval'; object-src 'self'",
     "options_page": "pages/options.html",
     "background": {
         "scripts": [ "scripts/background.js" ],
